create search box

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>test git</title>
   </head>
 
-  <body>
-    <header><h1>this is header</h1></header>
-  </body>
+  <body></body>
 
   <footer><h2>this is footer</h2></footer>
 </html>
