--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>test git</title>
   </head>
 
-  <body></body>
+  <body>
+    <header><h3>change header</h3></header>
+  </body>
 
   <footer><h2>this is footer</h2></footer>
 </html>
